[metadata]
name = rtadubai
version = 0.1.5pre1
author = NotNalin
description = Unofficial API for RTA Dubai
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NotNalin/rtadubai
project_urls = 
    Bug Tracker = https://github.com/NotNalin/rtadubai/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
install_requires = 
    requests
    BeautifulSoup4
python_requires = >=3.8

[options.packages.find]
where = src
